# crypto-balance

./: .gitignore  CRYPTO_BALANCE_OVERVIEW.md  Cargo.toml  HEXAGONAL.md  LICENSE  README.md  WORKSPACE.md  a.html  build.sh  debank_output.json  debank_scraper.py  docker-compose.kafka.yml  docker-compose.yml  otel-collector-config.yaml  postman_collection.json  rust-toolchain.toml  undetected_driver.py
.github/: copilot-instructions.md
app/: Cargo.toml
app/src/: application.rs  domain.rs  infrastructure.rs  main.rs  prelude.rs  prettyprint.rs
app/src/application/: exchange.rs  hold.rs  mod.rs  price.rs
app/src/application/debank/: debank_routine.rs
app/src/application/exchange/: binance.rs  binance_use_cases.rs  exchange_balances_routine.rs  kraken.rs  kraken_use_cases.rs  mod.rs  use_cases.rs
app/src/application/hold/: update_hold_balance_on_sheets.rs
app/src/application/price/: token_prices.rs
app/src/application/routines/: mod.rs
app/src/application/sheets/: mod.rs  spreadsheet.rs
app/src/blockchain/: constants.rs  prelude.rs
app/src/blockchain/block_explorer/explorers/: prelude.rs  zksync.rs
app/src/blockchain/block_explorer/explorers/etherscan/: arbiscan.rs  etherscan.rs  etherscan_implementation.rs  mod.rs  polygonscan.rs  prelude.rs  scrollscan.rs
app/src/blockchain/block_explorer/explorers/mintscan/: mod.rs
app/src/blockchain/chain/: chain.rs  mod.rs
app/src/blockchain/chain/chains/: mod.rs  prelude.rs
app/src/blockchain/chain/chains/cosmos/: prelude.rs
app/src/blockchain/chain/chains/evm/: chains.rs  mod.rs
app/src/blockchain/token/: mod.rs
app/src/config/: app_config.rs  bybit_config.rs  mod.rs  sheets_config.rs
app/src/domain/: blockchain.rs  exchange.rs  mod.rs  routine.rs  sheets.rs
app/src/domain/blockchain/: constants.rs  explorer.rs  token_balance.rs
app/src/domain/debank/: entities.rs  mod.rs
app/src/domain/sheets/: a1_notation.rs  cell_position.rs  cell_range.rs  column.rs  flatten_double_vec.rs  mod.rs  ranges.rs  row.rs
app/src/exchange/data/binance/: binance_use_cases.rs
app/src/exchange/data/kraken/: kraken_use_cases.rs  mod.rs
app/src/exchange/domain/: exchange.rs
app/src/infrastructure/: blockchain.rs  debank.rs  exchange.rs  mod.rs  sheets.rs
app/src/infrastructure/blockchain/: chains.rs  mod.rs
app/src/infrastructure/blockchain/explorers/: etherscan.rs
app/src/infrastructure/blockchain/explorers/etherscan/: arbiscan.rs  etherscan_implementation.rs  optimistic_etherscan.rs  polygonscan.rs
app/src/infrastructure/blockchain/token/: mod.rs
app/src/infrastructure/config/: binance_config.rs
app/src/infrastructure/debank/: aah_parser.rs  api_client.rs  debank_scraper.rs  debank_scraper_selectors.md  fantoccini_scraper_driver.rs  mod.rs  scraper_driver.rs
app/src/infrastructure/exchange/: binance_factory.rs  kraken_factory.rs  spreadsheet_balance_repository.rs
app/src/infrastructure/price/: api.rs  price.rs
app/src/infrastructure/sheets/: auth.rs  cell_range.rs  mod.rs  spreadsheet_manager.rs  spreadsheet_read.rs  spreadsheet_write.rs
app/src/prettyprint/: mod.rs  prettyprint.rs
app/src/price/domain/: price.rs
app/src/routines/: debank_routine.rs  debank_tokens_routine.rs  debank_total_usd_routine.rs  exchange_balances_routine.rs  mod.rs  routine.rs  token_prices.rs  update_hold_balance_on_sheets.rs
app/src/scraping/: aah_parser.rs  debank_scraper.rs  mod.rs  scraper_driver.rs  webdriver_extensions.rs
app/src/sheets/: into.rs  mod.rs  ranges.rs  value_range_factory.rs
app/src/sheets/data/: mod.rs  spreadsheet.rs  spreadsheet_manager.rs  spreadsheet_read.rs  spreadsheet_write.rs
app/src/sheets/domain/: cell_position.rs  cell_range.rs  column.rs  mod.rs
crates/cli/: Cargo.toml  Dockerfile
crates/cli/src/: application_service_factory.rs  cli_adapter.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/adapters/: exchange.rs  kafka_publisher.rs  mod.rs  price.rs  sheets.rs
crates/core/src/adapters/blockchain/: token.rs
crates/core/src/adapters/blockchain/explorers/etherscan/: arbiscan.rs  etherscan_implementation.rs  optimistic_etherscan.rs  polygonscan.rs
crates/core/src/adapters/blockchain/token/: spam_filter.rs
crates/core/src/adapters/config/: app_config.rs  blockchain_config.rs  price_config.rs
crates/core/src/adapters/debank/: aah_parser.rs
crates/core/src/adapters/exchange/: binance_factory.rs  kraken_factory.rs  spreadsheet_balance_repository.rs
crates/core/src/adapters/sheets/: auth.rs  cell_range.rs  spreadsheet_manager.rs  spreadsheet_read.rs  spreadsheet_write.rs  value_range_factory.rs
crates/core/src/application/: debank.rs  hold.rs  mod.rs  price.rs  service.rs
crates/core/src/application/debank/: debank_routine.rs
crates/core/src/application/exchange/: binance_use_cases.rs  kraken_use_cases.rs  use_cases.rs
crates/core/src/application/hold/: update_hold_balance_on_sheets.rs
crates/core/src/application/price/: token_prices.rs
crates/core/src/config/: app_config.rs
crates/core/src/domain/: exchange.rs  mod.rs  routine.rs
crates/core/src/domain/blockchain/: chain.rs  token.rs
crates/core/src/domain/sheets/: cell_position.rs  column.rs  ranges.rs  row.rs
crates/core/src/ports/: application_service.rs  balance_repository.rs  command_handler.rs  event_handler.rs  exchange_use_cases.rs  mod.rs  routine.rs
crates/core/src/prettyprint/: mod.rs  prettyprint.rs
crates/kafka/: Cargo.toml  Dockerfile
crates/kafka/src/: application_service_factory.rs  kafka_adapter.rs  main.rs
docs/: debank-html-analysis.md  debank-parser-prompt.md  example.html  noclick_full.html
schemas/: ChainInfo.json  JobResultResponse.json  JobStatusResponse.json  PortfolioData.json  PortfolioMetadata.json  Project.json  README.md  ScrapeRequest.json  ScrapeResponse.json  SpotTokenInfo.json  TokenInfo.json  TokenSection.json  Tracking.json  WalletInfo.json  all_schemas.json
src/: app_config.rs  constants.rs  main.rs  prelude.rs  routines.rs  token.rs
src/cli/: progress.rs
struct_name/: Cargo.toml
struct_name_derive/: Cargo.toml
(+185 files in other folders)
