[package]
name = "crypto-balance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.4"
lazy_static = "1.4.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
google-sheets4 = "*"
tokio = { version = "1.36.0", features = ["macros"] }
futures = "0.3.30"
