[package]
name = "crypto-balance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
binance-rs-async = "1.3.2"
google-sheets4 = "*"
tokio = { version = "1.36.0", features = ["macros"] }
futures = "0.3.30"
thiserror = "1.0"
async-trait = "0.1.77"
strum = { version = "0.26", features = ["derive"] }
