[package]
name = "crypto-balance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
struct_name = { path = "../struct_name" }
struct_name_derive = { path = "../struct_name_derive" }
config = "0.14.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
binance-rs-async = "1.3.2"
krakenrs = { git = "https://github.com/marcuscastelo/krakenrs-async" }
bybit_rs = { git = "https://github.com/marcuscastelo/bybit_rs" }
google-sheets4 = "*"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
thiserror = "1.0"
async-trait = "0.1.77"
strum = { version = "0.26", features = ["derive"] }
num-traits = "0.2"
anyhow = "1.0.80"
fantoccini = "0.19.3"
rand = "0.8.5"
hmac = "0.12.1"
sha2 = "0.10.8"
chrono = "0.4.19"
error-stack = { version = "0.4.1", features = ["anyhow"] }
regex = "1.10.4"
indicatif-log-bridge = "0.2.3"
indicatif = "0.17.8"
undetected-chromedriver = "0.1.2"
tracing = "0.1"
tracing-indicatif = "0.3.9"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-chrome = "0.6"
tracing-flame = "0.2"
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21" }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic"] } # ou "http-proto" se quiser OTLP/HTTP
tonic = "0.10" # se usar grpc-tonic
