[package]
name = "crypto-balance-kafka"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crypto-balance-kafka"
path = "src/main.rs"

[dependencies]
# Core library
crypto-balance-core = { path = "../core" }

# Workspace dependencies
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }
async-trait = { workspace = true }

# Kafka specific
rdkafka = { workspace = true }